# fuel-core-protobuf

./: README.md
.github/workflows/: ci.yml
fuel-core-protobuf/: Cargo.toml  build.rs
fuel-core-protobuf/proto/: api.proto
fuel-core-protobuf/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
