[package]
name = "fuel-core-protobuf"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
prost = { version = "0.14.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
