[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
name = "fuel-core-protobuf"
description = "Protobuf definitions for Fuel Core components"
keywords = ["fuel", "fuel-core", "protobuf", "vm"]
repository = "https://github.com/FuelLabs/fuel-core-protobuf"
version = "0.4.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
prost = { version = "0.14.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
